# advent-of-code-2023

day1_trebuchet/: Cargo.toml
day1_trebuchet/src/: main.rs
day2_cube_conundrum/: Cargo.toml
day2_cube_conundrum/src/: lib.rs
day3_gear_ratios/: Cargo.toml
day3_gear_ratios/src/: lib.rs  main.rs
